refactor: #94 종목 뉴스 반환값 String 교체