@@ -4,14 +4,13 @@ import com.ssafy.news.domain.entity.IndustryNews;
 import com.ssafy.news.domain.entity.StockKeyword;
 import com.ssafy.news.domain.entity.StockNews;
 import com.ssafy.news.domain.entity.StockNewsStockCode;
-import com.ssafy.news.domain.entity.dto.IndustryNewsDto;
-import com.ssafy.news.domain.entity.dto.StockKeywordDto;
-import com.ssafy.news.domain.entity.dto.StockNewsDto;
-import com.ssafy.news.domain.entity.dto.StockNewsStockCodeDto;
+import com.ssafy.news.domain.entity.dto.*;
 import lombok.extern.slf4j.Slf4j;
 
 import java.util.List;
 import java.util.stream.Collectors;
+
+import static java.util.stream.Collectors.toList;
 
 @Slf4j
 public class NewsConverter {
@@ -25,22 +24,32 @@ public class NewsConverter {
     // 종목 뉴스 목록을 DTO로 변환하는 메서드 분리
     public static List<StockNewsDto> convertStockToDtoList(List<StockNews> content) {
         return content.stream().map(stockNews -> {
-            List<StockKeywordDto> stockKeywordDtos = convertKeywordToDto(stockNews.getStockKeywords());
-            List<StockNewsStockCodeDto> stockNewsStockCodeDtos = convertStockCodeToDto(stockNews.getStockNewsStockCodes());
+            List<String> stockKeywords = convertKeywordToDto(stockNews.getStockKeywords());
+            List<String> stockNewsStockCodeDtos = convertStockCodeToDto(stockNews.getStockNewsStockCodes());
 
-            return StockNewsDto.of(stockNews, stockNewsStockCodeDtos, stockKeywordDtos);
-        }).collect(Collectors.toList());
+            return StockNewsDto.of(stockNews, stockNewsStockCodeDtos, stockKeywords);
+        }).collect(toList());
     }
 
-    private static List<StockKeywordDto> convertKeywordToDto(List<StockKeyword> content) {
+    public static List<StockNewsPreviewDto> convertStockToPreviewDtoList(List<StockNews> content) {
         return content.stream()
-                .map(StockKeywordDto::of)
-                .toList();
+                .map(stockNews -> {
+                    List<String> stockKeywords = convertKeywordToDto(stockNews.getStockKeywords());
+                    List<String> stockNewsStockCodeDtos = convertStockCodeToDto(stockNews.getStockNewsStockCodes());
+
+                    return StockNewsPreviewDto.of(stockNews, stockNewsStockCodeDtos, stockKeywords);
+                }).collect(toList());
     }
 
-    private static List<StockNewsStockCodeDto> convertStockCodeToDto(List<StockNewsStockCode> content) {
+    private static List<String> convertKeywordToDto(List<StockKeyword> content) {
         return content.stream()
-                .map(StockNewsStockCodeDto::of)
-                .toList();
+                .map(StockKeyword::getKeyword)
+                .collect(Collectors.toList());
+    }
+
+    private static List<String> convertStockCodeToDto(List<StockNewsStockCode> content) {
+        return content.stream()
+                .map(StockNewsStockCode::getStockCode)
+                .collect(Collectors.toList());
     }
 }
